move utils out of ui

--- a/libs/shared/ui/src/lib/Header.astro
+++ b/libs/shared/ui/src/lib/Header.astro
@@ -4,7 +4,7 @@ import Logo from './Logo.astro';
 import ToggleTheme from './ToggleTheme.astro';
 import ToggleMenu from './ToggleMenu.astro';
 
-import { getHomePermalink, getAsset } from './utils/permalinks';
+import { getHomePermalink, getAsset } from '@astro-nx-depla/shared/utils';
 
 interface Link {
   text?: string;
