--- a/apps/website/src/layouts/BaseLayout.astro
+++ b/apps/website/src/layouts/BaseLayout.astro
@@ -1,21 +1,28 @@
 ---
+import '~/assets/styles/base.css';
+import MetaTags from '~/components/MetaTags.astro';
+import BasicScripts from '~/components/BasicScripts.astro';
+
+import { MetaSEO } from '~/types';
+import { SITE } from '@astro-nx-depla/website/config';
+
 export interface Props {
-  title: string;
-  description: string;
-  socialImage?: string;
-  socialImageAlt?: string;
+  meta?: MetaSEO;
 }
 
-const { title: pageTitle, description, socialImage, socialImageAlt } = Astro.props;
-const { canonicalURL } = Astro.request;
-const siteName = 'Deploy.day';
-const title = `${pageTitle} | ${siteName}`;
+const { meta = {} } = Astro.props;
+const { language = 'en', textDirection = 'ltr' } = SITE;
 ---
 
-<html lang="en" class="scroll-smooth">
-  <head><title>{title}</title></head>
+<!DOCTYPE html>
+<html lang={language} dir={textDirection} class="2xl:text-[20px]">
+  <head>
+    <MetaTags {...meta} />
+  </head>
+
   <body class="antialiased text-page bg-light dark:text-slate-300 tracking-tight dark:bg-dark">
     <slot />
+    <BasicScripts />
     <style is:global>
       img {
         content-visibility: auto;
