--- a/libs/shared/ui/src/lib/Logo.astro
+++ b/libs/shared/ui/src/lib/Logo.astro
@@ -1,6 +1,8 @@
 ---
+import { Image } from '@astrojs/image/components';
+const logo = import('../assets/images/logo.png');
 ---
 
 <span class="self-center ml-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white">
-  🚀 Deploy.day</span
->
+  <Image src={logo} alt="🚀 Deploy.day" width={226} height={88} />
+</span>
