--- a/libs/shared/ui/src/lib/Footer.astro
+++ b/libs/shared/ui/src/lib/Footer.astro
@@ -1,6 +1,5 @@
 ---
 import { Icon } from 'astro-icon';
-import { SITE } from '@astro-nx-depla/website/config';
 import { getHomePermalink } from '@astro-nx-depla/shared/utils';
 
 interface Link {
@@ -21,9 +20,17 @@ export interface Props {
   socialLinks: Array<Link>;
   footNote?: string;
   theme?: string;
+  siteName?: string;
 }
 
-const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme = 'light' } = Astro.props;
+const {
+  socialLinks = [],
+  secondaryLinks = [],
+  links = [],
+  footNote = '',
+  theme = 'light',
+  siteName = ''
+} = Astro.props;
 ---
 
 <footer class:list={[{ dark: theme === 'dark' }, 'relative border-t border-gray-200 dark:border-slate-800']}>
@@ -32,7 +39,7 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
     <div class="grid grid-cols-12 gap-4 gap-y-8 sm:gap-8 py-8 md:py-12">
       <div class="col-span-12 lg:col-span-4">
         <div class="mb-2">
-          <a class="inline-block font-bold text-xl" href={getHomePermalink()}>{SITE?.name}</a>
+          <a class="inline-block font-bold text-xl" href={getHomePermalink()}>{siteName}</a>
         </div>
         <div class="text-sm text-muted">
           {
