--- a/apps/website/src/components/BasicScripts.astro
+++ b/apps/website/src/components/BasicScripts.astro
@@ -1,8 +1,8 @@
 ---
-import { SITE } from '@astro-nx-depla/website/config';
+import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
 ---
 
-<script is:inline define:vars={{ defaultTheme: SITE.defaultTheme }}>
+<script is:inline define:vars={{ defaultTheme: CONFIG.get('app').defaultTheme }}>
   function applyTheme(theme) {
     if (theme === 'dark') {
       document.documentElement.classList.add('dark');
