--- a/apps/website/src/components/blog/LatestPosts.astro
+++ b/apps/website/src/components/blog/LatestPosts.astro
@@ -1,7 +1,9 @@
 ---
 import Grid from '~/components/blog/Grid.astro';
 
-import { findLatestPosts, getBlogPermalink } from '@astro-nx-depla/shared/utils';
+import { getBlogPermalink } from '@astro-nx-depla/shared/utils';
+import { findLatestPosts } from '@astro-nx-depla/website/data-access/post';
+
 
 export interface Props {
   title?: string;
