--- a/apps/website/src/components/blog/ListItem.astro
+++ b/apps/website/src/components/blog/ListItem.astro
@@ -3,11 +3,13 @@ import { Icon } from 'astro-icon';
 import { Picture } from '@astrojs/image/components';
 import PostTags from '~/components/blog/Tags.astro';
 
-import { BLOG } from '@astro-nx-depla/website/config';
+import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
 import type { Post } from '~/types';
 
 import { getPermalink, findImage } from '@astro-nx-depla/shared/utils';
 import { getFormattedDate } from '@astro-nx-depla/shared/util/formatting';
+
+const BLOG = CONFIG.get('entities.post')
 
 export interface Props {
   post: Post;
@@ -16,7 +18,7 @@ export interface Props {
 const { post } = Astro.props;
 const image = await findImage(post.image);
 
-const link = !BLOG?.post?.disabled ? getPermalink(post.permalink, 'post') : '';
+const link = !BLOG?.item?.disabled ? getPermalink(post.permalink, 'post') : '';
 ---
 
 <article class={`max-w-md mx-auto md:max-w-none grid gap-6 md:gap-8 ${image ? 'md:grid-cols-2' : ''}`}>
