--- a/apps/website/src/components/blog/SinglePost.astro
+++ b/apps/website/src/components/blog/SinglePost.astro
@@ -8,7 +8,7 @@ import { SocialShare } from '@astro-nx-depla/shared/ui';
 import { getPermalink } from '@astro-nx-depla/shared/utils';
 import { getFormattedDate } from '@astro-nx-depla/shared/util/formatting';
 
-import type { Post } from '~/types';
+import type { Post } from '@astro-nx-depla/website/types';
 
 export interface Props {
   post: Post;
