--- a/apps/website/src/components/blog/Tags.astro
+++ b/apps/website/src/components/blog/Tags.astro
@@ -1,8 +1,10 @@
 ---
 import { getPermalink } from '@astro-nx-depla/shared/utils';
 
-import { BLOG } from '@astro-nx-depla/website/config';
+import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
 import type { Post } from '~/types';
+
+const TAG = CONFIG.get('entities.post.taxonomies.tag')
 
 export interface Props {
   tags: Post['tags'];
@@ -17,7 +19,7 @@ const { tags, class: className = 'text-sm' } = Astro.props;
     <ul class={className}>
       {tags.map((tag) => (
         <li class="bg-gray-100 dark:bg-slate-700 inline-block mr-2 mb-2 py-0.5 px-2 lowercase font-medium">
-          {BLOG?.tag?.disabled ? (
+          {TAG?.disabled ? (
             tag
           ) : (
             <a
