--- a/apps/website/src/pages/[...blog]/index.astro
+++ b/apps/website/src/pages/[...blog]/index.astro
@@ -1,14 +1,18 @@
 ---
-import { BLOG } from '@astro-nx-depla/website/config';
+import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
 
 import Layout from '~/layouts/PageLayout.astro';
 import SinglePost from '~/components/blog/SinglePost.astro';
 import ToBlogLink from '~/components/blog/ToBlogLink.astro';
 
-import { getCanonical, getPermalink, findImage, fetchPosts } from '@astro-nx-depla/shared/utils';
+import { getCanonical, getPermalink, findImage } from '@astro-nx-depla/shared/utils';
+import { fetchPosts } from '@astro-nx-depla/website/data-access/post';
+
+const BLOG = CONFIG.get('entities.post')
 
 export async function getStaticPaths() {
-  if (BLOG?.disabled || BLOG?.post?.disabled) return [];
+  const BLOG = CONFIG.get('entities.post')
+  if (BLOG?.disabled || BLOG?.item?.disabled) return [];
   return (await fetchPosts()).map((post) => ({
     params: {
       blog: post.permalink,
@@ -25,7 +29,7 @@ const meta = {
   description: post.description,
   canonical: post.canonical || url,
   image: await findImage(post.image),
-  noindex: BLOG?.post?.noindex,
+  noindex: BLOG?.item?.noindex,
   ogType: 'article',
 };
 ---
