implement shared/libs/formatting

--- a/apps/website/src/components/blog/SinglePost.astro
+++ b/apps/website/src/components/blog/SinglePost.astro
@@ -5,7 +5,8 @@ import { Picture } from '@astrojs/image/components';
 import PostTags from '~/components/blog/Tags.astro';
 import { SocialShare } from '@astro-nx-depla/shared/ui';
 
-import { getPermalink, getFormattedDate } from '@astro-nx-depla/shared/utils';
+import { getPermalink } from '@astro-nx-depla/shared/utils';
+import { getFormattedDate } from '@astro-nx-depla/shared/util/formatting';
 
 import type { Post } from '~/types';
 
