--- a/apps/website/src/components/blog/ListItem.astro
+++ b/apps/website/src/components/blog/ListItem.astro
@@ -6,7 +6,8 @@ import PostTags from '~/components/blog/Tags.astro';
 import { BLOG } from '@astro-nx-depla/website/config';
 import type { Post } from '~/types';
 
-import { getPermalink, findImage, getFormattedDate } from '@astro-nx-depla/shared/utils';
+import { getPermalink, findImage } from '@astro-nx-depla/shared/utils';
+import { getFormattedDate } from '@astro-nx-depla/shared/util/formatting';
 
 export interface Props {
   post: Post;
