--- a/apps/website/src/components/blog/ListItem.astro
+++ b/apps/website/src/components/blog/ListItem.astro
@@ -6,10 +6,11 @@ import PostTags from '~/components/blog/Tags.astro';
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
 import type { Post } from '~/types';
 
-import { getPermalink, findImage } from '@astro-nx-depla/shared/utils';
+import { getPermalink } from '@astro-nx-depla/website/data-access/url';
+import { findImage } from '@astro-nx-depla/website/data-access/url';
 import { getFormattedDate } from '@astro-nx-depla/shared/util/formatting';
 
-const BLOG = CONFIG.get('entities.post')
+const BLOG = CONFIG.get('entities.post');
 
 export interface Props {
   post: Post;
@@ -21,7 +22,11 @@ const image = await findImage(post.image);
 const link = !BLOG?.item?.disabled ? getPermalink(post.permalink, 'post') : '';
 ---
 
-<article class={`max-w-md mx-auto md:max-w-none grid gap-6 md:gap-8 ${image ? 'md:grid-cols-2' : ''}`}>
+<article
+  class={`max-w-md mx-auto md:max-w-none grid gap-6 md:gap-8 ${
+    image ? 'md:grid-cols-2' : ''
+  }`}
+>
   {
     image && (
       <a class="relative block group" href={link ?? 'javascript:void(0)'}>
@@ -46,14 +51,22 @@ const link = !BLOG?.item?.disabled ? getPermalink(post.permalink, 'post') : '';
     <header>
       <div class="mb-1">
         <span class="text-sm">
-          <Icon name="tabler:clock" class="w-3.5 h-3.5 inline-block -mt-0.5 dark:text-gray-400" />
-          <time datetime={String(post.publishDate)}>{getFormattedDate(post.publishDate)}</time>
+          <Icon
+            name="tabler:clock"
+            class="w-3.5 h-3.5 inline-block -mt-0.5 dark:text-gray-400"
+          />
+          <time datetime={String(post.publishDate)}
+            >{getFormattedDate(post.publishDate)}</time
+          >
           {
             post.category && (
               <>
                 {' '}
                 ·{' '}
-                <a class="capitalize hover:underline" href={getPermalink(post.category, 'category')}>
+                <a
+                  class="capitalize hover:underline"
+                  href={getPermalink(post.category, 'category')}
+                >
                   {post.category.replaceAll('-', ' ')}
                 </a>
               </>
@@ -61,10 +74,15 @@ const link = !BLOG?.item?.disabled ? getPermalink(post.permalink, 'post') : '';
           }
         </span>
       </div>
-      <h2 class="text-xl sm:text-2xl font-bold leading-tight mb-2 font-heading dark:text-slate-300">
+      <h2
+        class="text-xl sm:text-2xl font-bold leading-tight mb-2 font-heading dark:text-slate-300"
+      >
         {
           link ? (
-            <a class="hover:text-primary dark:hover:text-blue-700 transition ease-in duration-200" href={link}>
+            <a
+              class="hover:text-primary dark:hover:text-blue-700 transition ease-in duration-200"
+              href={link}
+            >
               {post.title}
             </a>
           ) : (
@@ -74,7 +92,13 @@ const link = !BLOG?.item?.disabled ? getPermalink(post.permalink, 'post') : '';
       </h2>
     </header>
 
-    {post.excerpt && <p class="flex-grow text-muted dark:text-slate-400 text-lg">{post.excerpt}</p>}
+    {
+      post.excerpt && (
+        <p class="flex-grow text-muted dark:text-slate-400 text-lg">
+          {post.excerpt}
+        </p>
+      )
+    }
     <footer class="mt-5">
       <PostTags tags={post.tags} />
     </footer>
