--- a/apps/website/src/components/MetaTags.astro
+++ b/apps/website/src/components/MetaTags.astro
@@ -5,12 +5,13 @@ import { getImage } from '@astrojs/image';
 
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
 import { MetaSEO } from '~/types';
-import { getCanonical, getAsset, getRelativeUrlByFilePath  } from '@astro-nx-depla/shared/utils';
+import { getCanonical, getAsset } from '@astro-nx-depla/website/data-access/url';
+import { getRelativeUrlByFilePath } from '@astro-nx-depla/website/data-access/url';
 
 import CustomStyles from '~/components/CustomStyles.astro';
 import SplitbeeAnalytics from './SplitbeeAnalytics.astro';
 
-const SITE = CONFIG.get('app')
+const SITE = CONFIG.get('app');
 
 export interface Props extends MetaSEO {
   dontUseTitleTemplate?: boolean;
@@ -86,12 +87,27 @@ const image =
 <CustomStyles />
 
 <!-- Google Site Verification -->
-{SITE.googleSiteVerificationId && <meta name="google-site-verification" content={SITE.googleSiteVerificationId} />}
+{
+  SITE.googleSiteVerificationId && (
+    <meta
+      name="google-site-verification"
+      content={SITE.googleSiteVerificationId}
+    />
+  )
+}
 
 <!-- Google Analytics -->
-{SITE.googleAnalyticsId && <GoogleAnalytics id={String(SITE.googleAnalyticsId)} partytown={true} />}
+{
+  SITE.googleAnalyticsId && (
+    <GoogleAnalytics id={String(SITE.googleAnalyticsId)} partytown={true} />
+  )
+}
 
-{SITE.splitbeeAnalytics?.enabled && <SplitbeeAnalytics {...SITE.splitbeeAnalytics} />}
+{
+  SITE.splitbeeAnalytics?.enabled && (
+    <SplitbeeAnalytics {...SITE.splitbeeAnalytics} />
+  )
+}
 
 <link rel="shortcut icon" href={getAsset('/favicon.ico')} />
 <link rel="icon" type="image/svg+xml" href={getAsset('/favicon.svg')} />
