--- a/apps/website/src/pages/[...blog]/index.astro
+++ b/apps/website/src/pages/[...blog]/index.astro
@@ -5,13 +5,14 @@ import Layout from '~/layouts/PageLayout.astro';
 import SinglePost from '~/components/blog/SinglePost.astro';
 import ToBlogLink from '~/components/blog/ToBlogLink.astro';
 
-import { getCanonical, getPermalink, findImage } from '@astro-nx-depla/shared/utils';
+import { getCanonical, getPermalink } from '@astro-nx-depla/website/data-access/url';
+import { findImage } from '@astro-nx-depla/website/data-access/url';
 import { fetchPosts } from '@astro-nx-depla/website/data-access/post';
 
-const BLOG = CONFIG.get('entities.post')
+const BLOG = CONFIG.get('entities.post');
 
 export async function getStaticPaths() {
-  const BLOG = CONFIG.get('entities.post')
+  const BLOG = CONFIG.get('entities.post');
   if (BLOG?.disabled || BLOG?.item?.disabled) return [];
   return (await fetchPosts()).map((post) => ({
     params: {
