generate shared/layout lib

--- a/apps/website/src/pages/[...blog]/[tag]/[...page].astro
+++ b/apps/website/src/pages/[...blog]/[tag]/[...page].astro
@@ -1,7 +1,7 @@
 ---
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
 
-import Layout from '~/layouts/PageLayout.astro';
+import { PageLayout as Layout } from '@astro-nx-depla/shared/layout';
 import BlogList from '~/components/blog/List.astro';
 import Pagination from '~/components/blog/Pagination.astro';
 
