--- a/apps/website/src/pages/index.astro
+++ b/apps/website/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
-import Layout from '~/layouts/PageLayout.astro';
+import { PageLayout as Layout } from '@astro-nx-depla/shared/layout';
 
 import Hero from '~/components/widgets/Hero.astro';
 import Note from '~/components/widgets/Note.astro';
