--- a/apps/website/src/pages/landing/mobile-app.astro
+++ b/apps/website/src/pages/landing/mobile-app.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '~/layouts/PageLayout.astro';
+import { PageLayout as Layout } from '@astro-nx-depla/shared/layout';
 
 import { Header } from '@astro-nx-depla/shared/ui';
 import Hero2 from '~/components/widgets/Hero2.astro';
