--- a/libs/shared/layout/src/lib/PageLayout.astro
+++ b/libs/shared/layout/src/lib/PageLayout.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '~/layouts/BaseLayout.astro';
+import Layout from './BaseLayout.astro';
 import { Footer, Header } from '@astro-nx-depla/shared/ui';
 import Announcement from '~/components/widgets/Announcement.astro';
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider'
