--- a/apps/website/src/pages/404.astro
+++ b/apps/website/src/pages/404.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '~/layouts/BaseLayout.astro';
+import { BaseLayout } from '@astro-nx-depla/shared/layout';
 import { getHomePermalink } from '@astro-nx-depla/website/data-access/url';
 
 const title = `Error 404`;
