--- a/apps/website/src/pages/[...blog]/index.astro
+++ b/apps/website/src/pages/[...blog]/index.astro
@@ -1,7 +1,7 @@
 ---
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
 
-import Layout from '~/layouts/PageLayout.astro';
+import { PageLayout as Layout } from '@astro-nx-depla/shared/layout';
 import SinglePost from '~/components/blog/SinglePost.astro';
 import ToBlogLink from '~/components/blog/ToBlogLink.astro';
 
