--- a/apps/website/src/pages/admin.astro
+++ b/apps/website/src/pages/admin.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '~/layouts/BaseLayout.astro';
+import { BaseLayout as Layout } from '@astro-nx-depla/shared/layout';
 ---
 <Layout />
 
