--- a/libs/shared/layout/src/lib/MarkdownLayout.astro
+++ b/libs/shared/layout/src/lib/MarkdownLayout.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '~/layouts/PageLayout.astro';
+import Layout from './PageLayout.astro';
 
 import { MetaSEO } from '~/types';
 
