generate website/menu-data lib

--- a/apps/website/src/pages/landing/startup.astro
+++ b/apps/website/src/pages/landing/startup.astro
@@ -5,7 +5,7 @@ import { Header } from '@astro-nx-depla/shared/ui';
 import Hero from '~/components/widgets/Hero.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
 
-import { headerData } from '~/data';
+import { headerData } from '@astro-nx-depla/website/menu-data';
 
 const meta = {
   title: "Startup Landing Page",
