--- a/libs/shared/layout/src/lib/PageLayout.astro
+++ b/libs/shared/layout/src/lib/PageLayout.astro
@@ -4,7 +4,7 @@ import { Footer, Header } from '@astro-nx-depla/shared/ui';
 import Announcement from '~/components/widgets/Announcement.astro';
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider'
 
-import { headerData, footerData } from '~/data';
+import { headerData, footerData } from '@astro-nx-depla/website/menu-data';
 
 import { MetaSEO } from '~/types';
 
