fix ref to types

--- a/apps/website/src/components/blog/GridItem.astro
+++ b/apps/website/src/components/blog/GridItem.astro
@@ -2,7 +2,7 @@
 import { Picture } from '@astrojs/image/components';
 
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
-import type { Post } from '~/types';
+import type { Post } from '@astro-nx-depla/website/types';
 
 import { getPermalink } from '@astro-nx-depla/website/data-access/url';
 import { findImage } from '@astro-nx-depla/website/data-access/url';
