--- a/apps/website/src/components/MetaTags.astro
+++ b/apps/website/src/components/MetaTags.astro
@@ -4,7 +4,7 @@ import { GoogleAnalytics } from '@astrolib/analytics';
 import { getImage } from '@astrojs/image';
 
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
-import { MetaSEO } from '~/types';
+import { MetaSEO } from '@astro-nx-depla/website/types';
 import { getCanonical, getAsset } from '@astro-nx-depla/website/data-access/url';
 import { getRelativeUrlByFilePath } from '@astro-nx-depla/website/data-access/url';
 
