--- a/apps/website/src/components/blog/List.astro
+++ b/apps/website/src/components/blog/List.astro
@@ -1,6 +1,6 @@
 ---
 import Item from '~/components/blog/ListItem.astro';
-import type { Post } from '~/types';
+import type { Post } from '@astro-nx-depla/website/types';
 
 export interface Props {
   posts: Array<Post>;
