--- a/apps/website/src/components/blog/Tags.astro
+++ b/apps/website/src/components/blog/Tags.astro
@@ -2,7 +2,7 @@
 import { getPermalink } from '@astro-nx-depla/website/data-access/url';
 
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
-import type { Post } from '~/types';
+import type { Post } from '@astro-nx-depla/website/types';
 
 const TAG = CONFIG.get('entities.post.taxonomies.tag')
 
