--- a/apps/website/src/pages/index.astro
+++ b/apps/website/src/pages/index.astro
@@ -2,16 +2,18 @@
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
 import { PageLayout as Layout } from '@astro-nx-depla/shared/layout';
 
-import Hero from '~/components/widgets/Hero.astro';
-import Note from '~/components/widgets/Note.astro';
-import Features from '~/components/widgets/Features.astro';
-import Features2 from '~/components/widgets/Features2.astro';
-import Steps from '~/components/widgets/Steps.astro';
-import Content from '~/components/widgets/Content.astro';
-import LatestPosts from '~/components/blog/LatestPosts.astro';
-import FAQs from '~/components/widgets/FAQs.astro';
-import Stats from '~/components/widgets/Stats.astro';
-import CallToAction from '~/components/widgets/CallToAction.astro';
+import {
+  Hero,
+  Note,
+  Features,
+  Features2,
+  Steps,
+  Content,
+  LatestPosts,
+  FAQs,
+  Stats,
+  CallToAction
+} from '@astro-nx-depla/shared/ui';
 
 const SITE = CONFIG.get('app')
 
