--- a/apps/website/src/pages/landing/mobile-app.astro
+++ b/apps/website/src/pages/landing/mobile-app.astro
@@ -1,9 +1,7 @@
 ---
 import { PageLayout as Layout } from '@astro-nx-depla/shared/layout';
 
-import { Header } from '@astro-nx-depla/shared/ui';
-import Hero2 from '~/components/widgets/Hero2.astro';
-import CallToAction from '~/components/widgets/CallToAction.astro';
+import { Hero2, Header, CallToAction  } from '@astro-nx-depla/shared/ui';
 
 const meta = {
   title: "Mobile App Landing Page",
