--- a/apps/website/src/pages/landing/saas.astro
+++ b/apps/website/src/pages/landing/saas.astro
@@ -1,11 +1,7 @@
 ---
 import { PageLayout as Layout } from '@astro-nx-depla/shared/layout';
 
-import { Header } from '@astro-nx-depla/shared/ui';
-import Hero2 from '~/components/widgets/Hero2.astro';
-import Steps2 from '~/components/widgets/Steps2.astro';
-import Content from '~/components/widgets/Content.astro';
-import CallToAction from '~/components/widgets/CallToAction.astro';
+import { Header, Hero2, Steps2, Content, CallToAction  } from '@astro-nx-depla/shared/ui';
 
 import { headerData } from '@astro-nx-depla/website/menu-data';
 
