--- a/apps/website/src/pages/landing/startup.astro
+++ b/apps/website/src/pages/landing/startup.astro
@@ -1,9 +1,7 @@
 ---
 import { PageLayout as Layout } from '@astro-nx-depla/shared/layout';
 
-import { Header } from '@astro-nx-depla/shared/ui';
-import Hero from '~/components/widgets/Hero.astro';
-import CallToAction from '~/components/widgets/CallToAction.astro';
+import { Header, Hero, CallToAction } from '@astro-nx-depla/shared/ui';
 
 import { headerData } from '@astro-nx-depla/website/menu-data';
 
