--- a/libs/shared/layout/src/lib/PageLayout.astro
+++ b/libs/shared/layout/src/lib/PageLayout.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from './BaseLayout.astro';
-import { Footer, Header } from '@astro-nx-depla/shared/ui';
-import Announcement from '~/components/widgets/Announcement.astro';
+import { Footer, Header, Announcement } from '@astro-nx-depla/shared/ui';
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider'
 
 import { headerData, footerData } from '@astro-nx-depla/website/menu-data';
