--- a/libs/shared/ui/src/lib/LatestPosts.astro
+++ b/libs/shared/ui/src/lib/LatestPosts.astro
@@ -1,7 +1,9 @@
 ---
-import Grid from '~/components/blog/Grid.astro';
+import { PostsGrid as Grid } from '@astro-nx-depla/shared/ui';
 
-import { getBlogPermalink, findPostsByIds  } from '@astro-nx-depla/website/data-access/url';
+import { getBlogPermalink } from '@astro-nx-depla/website/data-access/url';
+import { findLatestPosts } from '@astro-nx-depla/website/data-access/post';
+
 
 export interface Props {
   title?: string;
@@ -16,10 +18,10 @@ const {
   allPostsText = 'View all posts',
   allPostsLink = getBlogPermalink(),
   information = await Astro.slots.render('information'),
-  postIds = [],
+  count = 4,
 } = Astro.props;
 
-const posts = await findPostsByIds(postIds);
+const posts = await findLatestPosts({ count });
 ---
 
 <section class="px-4 py-16 mx-auto max-w-7xl lg:py-20">
@@ -36,7 +38,7 @@ const posts = await findPostsByIds(postIds);
       {
         allPostsText && allPostsLink && (
           <a
-            class="text-muted dark:text-slate-400 hover:text-primary transition ease-in duration-200 block mb-6 md:mb-0"
+            class="text-muted dark:text-slate-400 hover:text-primary transition ease-in duration-200 block mb-6 lg:mb-0"
             href={allPostsLink}
           >
             {allPostsText} »
