--- a/libs/shared/ui/src/lib/SinglePost.astro
+++ b/libs/shared/ui/src/lib/SinglePost.astro
@@ -2,7 +2,7 @@
 import { Icon } from 'astro-icon';
 import { Picture } from '@astrojs/image/components';
 
-import PostTags from '~/components/blog/Tags.astro';
+import { Tags as PostTags } from '@astro-nx-depla/shared/ui';
 import { SocialShare } from '@astro-nx-depla/shared/ui';
 
 import { getPermalink } from '@astro-nx-depla/website/data-access/url';
