--- a/apps/website/src/pages/[...blog]/[...page].astro
+++ b/apps/website/src/pages/[...blog]/[...page].astro
@@ -2,9 +2,11 @@
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
 
 import { PageLayout as Layout } from '@astro-nx-depla/shared/layout';
-import BlogList from '~/components/blog/List.astro';
-import Headline from '~/components/blog/Headline.astro';
-import Pagination from '~/components/blog/Pagination.astro';
+import {
+  PostsList as BlogList,
+  Headline,
+  Pagination
+} from '@astro-nx-depla/shared/ui';
 
 import { BLOG_BASE } from '@astro-nx-depla/website/data-access/url';
 import { fetchPosts } from '@astro-nx-depla/website/data-access/post';
