--- a/apps/website/src/pages/[...blog]/[tag]/[...page].astro
+++ b/apps/website/src/pages/[...blog]/[tag]/[...page].astro
@@ -2,12 +2,10 @@
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
 
 import { PageLayout as Layout } from '@astro-nx-depla/shared/layout';
-import BlogList from '~/components/blog/List.astro';
-import Pagination from '~/components/blog/Pagination.astro';
+import { Headline, PostsList as BlogList, Pagination } from '@astro-nx-depla/shared/ui';
 
 import { TAG_BASE } from '@astro-nx-depla/website/data-access/url';
 import { fetchPosts } from '@astro-nx-depla/website/data-access/post';
-import Headline from '~/components/blog/Headline.astro';
 
 const SITE = CONFIG.get('app')
 const TAG = CONFIG.get('entities.post.taxonomies.tag')
