--- a/libs/shared/ui/src/lib/MetaTags.astro
+++ b/libs/shared/ui/src/lib/MetaTags.astro
@@ -5,11 +5,14 @@ import { getImage } from '@astrojs/image';
 
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
 import { MetaSEO } from '@astro-nx-depla/website/types';
-import { getCanonical, getAsset } from '@astro-nx-depla/website/data-access/url';
-import { getRelativeUrlByFilePath } from '@astro-nx-depla/website/data-access/url';
+import {
+  getCanonical,
+  getAsset,
+  getRelativeUrlByFilePath
+} from '@astro-nx-depla/website/data-access/url';
 
 import CustomStyles from '~/components/CustomStyles.astro';
-import SplitbeeAnalytics from './SplitbeeAnalytics.astro';
+import { SplitbeeAnalytics } from '@astro-nx-depla/shared/ui';
 
 const SITE = CONFIG.get('app');
 
