--- a/libs/shared/ui/src/lib/PostsGrid.astro
+++ b/libs/shared/ui/src/lib/PostsGrid.astro
@@ -1,5 +1,5 @@
 ---
-import Item from '~/components/blog/GridItem.astro';
+import { PostsGridItem as Item } from '@astro-nx-depla/shared/ui';
 import type { Post } from '@astro-nx-depla/website/types';
 
 export interface Props {
