--- a/libs/shared/ui/src/lib/PostsList.astro
+++ b/libs/shared/ui/src/lib/PostsList.astro
@@ -1,5 +1,5 @@
 ---
-import Item from '~/components/blog/ListItem.astro';
+import { PostsListItem as Item } from '@astro-nx-depla/shared/ui';
 import type { Post } from '@astro-nx-depla/website/types';
 
 export interface Props {
