--- a/libs/shared/ui/src/lib/PostsListItem.astro
+++ b/libs/shared/ui/src/lib/PostsListItem.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from 'astro-icon';
 import { Picture } from '@astrojs/image/components';
-import PostTags from '~/components/blog/Tags.astro';
+import { Tags as PostTags } from '@astro-nx-depla/shared/ui';
 
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
 import type { Post } from '@astro-nx-depla/website/types';
