--- a/apps/website/src/pages/admin.astro
+++ b/apps/website/src/pages/admin.astro
@@ -1,6 +1,11 @@
 ---
 import { BaseLayout as Layout } from '@astro-nx-depla/shared/layout';
 ---
-<Layout />
+<Layout>
+  <div data-netlify-identity-menu></div>
+  <div data-netlify-identity-button>Login with Netlify Identity</div>
+  <div id="netlify-modal"></div>
+</Layout>
 
-<script>import "~/components/cms.jsx"</script>
+<script
+  src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
