--- a/apps/website/src/pages/admin.astro
+++ b/apps/website/src/pages/admin.astro
@@ -3,5 +3,4 @@ import { BaseLayout as Layout } from '@astro-nx-depla/shared/layout';
 ---
 <Layout />
 
-<script is:inline src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-
+<script is:inline>import "~/components/cms.jsx"</script>
