--- a/apps/website/src/pages/admin.astro
+++ b/apps/website/src/pages/admin.astro
@@ -1,6 +1,8 @@
 ---
 import { BaseLayout as Layout } from '@astro-nx-depla/shared/layout';
 ---
-<Layout />
+<Layout>
+<script>import "~/components/cms.jsx"</script>
+</Layout>
 
-<script is:inline>import "~/components/cms.jsx"</script>
+
