--- a/libs/shared/ui/src/lib/MetaTags.astro
+++ b/libs/shared/ui/src/lib/MetaTags.astro
@@ -116,4 +116,4 @@ const image =
 <link rel="icon" type="image/svg+xml" href={getAsset('/favicon.svg')} />
 <link rel="mask-icon" href={getAsset('/favicon.svg')} color="#8D46E7" />
 
-<link href="/admin/config.yml" type="text/yaml" rel="cms-config-url" />
+<link href="/admin2/config.yml" type="text/yaml" rel="cms-config-url" />
