--- a/apps/website/src/pages/admin2.astro
+++ b/apps/website/src/pages/admin2.astro
@@ -1,7 +1,9 @@
 ---
 import { Cms } from '~/components/cms.jsx'
+import { NetlifyIdentity } from "~/components/netlifyIdentity.jsx"
 ---
 
 <Fragment is:inline>
 <Cms client:only />
+<NetlifyIdentity client:only />
 </Fragment>
