--- a/apps/website/src/components/BasicScripts.astro
+++ b/apps/website/src/components/BasicScripts.astro
@@ -2,7 +2,7 @@
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
 ---
 
-<script is:inline define:vars={{ defaultTheme: CONFIG.get('app').defaultTheme }}>
+<script is:inline define:vars={{ env: CONFIG.get('app.env'), defaultTheme: CONFIG.get('app').defaultTheme }}>
   function applyTheme(theme) {
     if (theme === 'dark') {
       document.documentElement.classList.add('dark');
@@ -116,4 +116,8 @@ import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
     document.getElementById('header')?.classList.remove('h-screen');
     document.querySelector('#header nav')?.classList.add('hidden');
   };
+
+  window.DEPLOY_DAY = {
+    env
+  }
 </script>
