--- a/apps/website/src/pages/[...blog]/[...page].astro
+++ b/apps/website/src/pages/[...blog]/[...page].astro
@@ -1,37 +1,21 @@
 ---
-import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
-
 import { PageLayout as Layout } from '@astro-nx-depla/shared/layout';
 import {
   PostsList as BlogList,
   Headline,
   Pagination
 } from '@astro-nx-depla/shared/ui';
+import {
+  getPostListStaticPaths,
+  getMetaByPage,
+  Post,
+} from '@astro-nx-depla/website/entities/post';
 
-import { BLOG_BASE } from '@astro-nx-depla/website/data-access/url';
-import { fetchPosts } from '@astro-nx-depla/website/data-access/post';
+const { page } = Astro.props
 
-const SITE = CONFIG.get('app')
-const BLOG = CONFIG.get('entities.post')
+const meta = getMetaByPage(page)
 
-export async function getStaticPaths({ paginate }) {
-  const BLOG = CONFIG.get('entities.post')
-  if (BLOG?.disabled || BLOG?.list?.disabled) return [];
-  return paginate(await fetchPosts(), {
-    params: { blog: BLOG_BASE || undefined },
-    pageSize: BLOG.itemsPerPage,
-  });
-}
-
-const { page } = Astro.props;
-const currentPage = page.currentPage ?? 1;
-
-const meta = {
-  title: `Blog${currentPage > 1 ? ` — Page ${currentPage}` : ''}`,
-  description: SITE?.description,
-  noindex: BLOG?.list?.noindex || currentPage > 1,
-  ogType: 'blog',
-};
+export const getStaticPaths = getPostListStaticPaths
 ---
 
 <Layout {meta}>
